dashboard-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-ui-service
  namespace: app
spec:
  selector:
    dashboard-ui: first
  ports:
  - port: 80
    targetPort: 3091
