documents-api-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: documents-api-service
  namespace: app
spec:
  selector:
    documents-api: first
  ports:
  - name: documents-api-port
    protocol: TCP
    port: 3001
    targetPort: 3001
