documents-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documents-api-service
  namespace: app
spec:
  selector: 
    documents-api: first
  ports:
  - port: 80
    targetPort: 3001
