postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: app
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: postgres_port
  clusterIP: none
