uesers-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: app
spec:
  selector: 
    users-api: first
  ports:
  - port: 80
    targetPort: 3000
