users-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-ui-Service
  namespace: app
spec:
  selector:
    users-api: first
  ports:
  - name: users-api-port
    protocol: TCP
    port: 3000
    targetPort: 3000
