ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  rules:
  - host: 1.2.3.4.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-ui-service
            port:
              number: 80
      - path: /users-api
        pathType: Prefix
        backend:
          service:
            name: users-api-service
            port:
              number: 80
      - path: /documents-api
        pathType: Prefix
        backend:
          service:
            name: documents-api-service
            port:
              number: 80
